# FlightSimulator_interpreter

./: BasicVar.cpp  BasicVar.h  BinaryOperators.cpp  BinaryOperators.h  CMakeLists.txt  ClientCommand.cpp  ClientCommand.h  Command.h  CommandsClasses.cpp  CommandsClasses.h  Data.cpp  Data.h  Expression.h  InitMaps.cpp  InitMaps.h  Interpeter.cpp  Interpeter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  ProgVariables.cpp  ProgVariables.h  ProgramInclude.h  README.md  Singleton.h  UnaryOperators.cpp  UnaryOperators.h  VariableAir.cpp  VariableAir.h  data.cpp  data.h  fly.txt  main.cpp  serverCommand.cpp  serverCommand.h
Command/: ClientCommand.cpp  ClientCommand.h  Command.h  CommandsClasses.cpp  CommandsClasses.h  InitMaps.cpp  InitMaps.h  serverCommand.cpp  serverCommand.h
ShuntingAlgorithm/: BasicVar.cpp  BinaryAndUnaryAbstract.cpp  BinaryAndUnaryAbstract.h  Interpeter.cpp  Interpeter.h
